@@ -1,1 +1,1 @@
-12.3.0-rc2
+12.3.0
