@@ -1,111 +1,0 @@
-                                Release Summary
-
-                              asterisk-12.3.0-rc2
-
-                                Date: 2014-05-28
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-12.3.0-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 414782   | bebuild | Create 12.3.0-rc2             |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 414783   | bebuild | Remove old summaries; Update  |                   |
-   |          |         | .version                      |                   |
-   |----------+---------+-------------------------------+-------------------|
-   |          |         | Merge r414528, r414749,       |                   |
-   | 414784   | bebuild | r414763, r414765 for          |                   |
-   |          |         | 12.3.0-rc2                    |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                             |    2
- ChangeLog                            |   50 ++
- UPGRADE.txt                          |    8
- asterisk-12.3.0-rc1-summary.html     |  512 -----------------------
- asterisk-12.3.0-rc1-summary.txt      |  763 -----------------------------------
- contrib/ast-db-manage/cdr/env.py     |    5
- include/asterisk/manager.h           |    2
- include/asterisk/res_pjsip_session.h |   22 -
- res/res_pjsip_session.c              |   87 ++-
- res/res_pjsip_t38.c                  |   15
- rest-api/api-docs/applications.json  |    2
- rest-api/api-docs/asterisk.json      |    2
- rest-api/api-docs/bridges.json       |    2
- rest-api/api-docs/channels.json      |    2
- rest-api/api-docs/deviceStates.json  |    2
- rest-api/api-docs/endpoints.json     |    2
- rest-api/api-docs/events.json        |    2
- rest-api/api-docs/mailboxes.json     |    2
- rest-api/api-docs/playbacks.json     |    2
- rest-api/api-docs/recordings.json    |    2
- rest-api/api-docs/sounds.json        |    2
- rest-api/resources.json              |    2
- tests/test_cel.c                     |    4
- 23 files changed, 160 insertions(+), 1334 deletions(-)
-
-     ----------------------------------------------------------------------
