@@ -1,3 +1,7 @@
+2014-05-29  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 12.3.0 Released.
+
 2014-05-28  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 12.3.0-rc2 Released.
